fixed a weird spacing issue that appeared on a different computer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,7 +152,7 @@ div.ruler-sm {
 .social li img {
   width: 60px;
   height: auto;
-  margin-right: 6px;
+  margin-right: 5px;
 }
 
 .social ul li {
